feat : list 기능 추가

--- a/src/main/resources/messages/validations.properties
+++ b/src/main/resources/messages/validations.properties
@@ -6,6 +6,7 @@ NotBlank.latitude=위도를 입력해주세요.
 NotBlank.longitude=경도를 입력해주세요.
 NotBlank.obsknd=관측방식을 입력해주세요.
 NotBlank.mngorg=운영기관을 입력해주세요
+NotBlank.obscd=관측소 코드를 입력해주세요.
 
 Duplicated.obsnm=이미 등록된 관측소 입니다.
 Duplicated.sbsncd=이미 등록된 표준유역 코드입니다.
