--- a/pom.xml
+++ b/pom.xml
@@ -188,6 +188,11 @@
 			<artifactId>jackson-datatype-jsr310</artifactId>
 			<version>2.16.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.2.0</version>
+		</dependency>
 
 
 
