--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,12 @@
 		    <version>${spring.maven.artifact.version}</version>
 		    <scope>test</scope>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aspects</artifactId>
+			<version>${spring.maven.artifact.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.thymeleaf</groupId>
 			<artifactId>thymeleaf-spring5</artifactId>
@@ -120,7 +125,7 @@
 			<artifactId>querydsl-apt</artifactId>
 			<version>4.4.0</version>
 		</dependency>
-		
+
 		<!-- 표준프레임워크 실행환경 -->
         <dependency>
 		    <groupId>org.egovframe.rte</groupId>
