feat : 유효성 검사 1차

--- a/src/main/resources/messages/validations.properties
+++ b/src/main/resources/messages/validations.properties
@@ -1,12 +1,12 @@
 # 관측소
-NotBlank.obsnm=관측소 이름을 입력해주세요.
-NotBlank.obstype=관측 유형을 입력해주세요.
-NotBlank.sbsncd=표준 코드를 입력해주세요.
-NotBlank.latitude=위도를 입력해주세요.
-NotBlank.longitude=경도를 입력해주세요.
-NotBlank.obsknd=관측방식을 입력해주세요.
-NotBlank.mngorg=운영기관을 입력해주세요
-NotBlank.obscd=관측소 코드를 입력해주세요.
+NotBlank.requestObservatory.obsnm=관측소명을 입력해주세요.
+NotBlank.requestObservatory.type=관측 유형을 입력해주세요.
+NotBlank.requestObservatory.obscd=표준 코드를 입력해주세요.
+NotBlank.requestObservatory.latitude=위도를 입력해주세요.
+NotBlank.requestObservatory.longitude=경도를 입력해주세요.
+NotBlank.requestObservatory.obsknd=관측방식을 입력해주세요.
+NotBlank.requestObservatory.mngorg=운영기관을 입력해주세요
+Size.requestObservatory.obscd=8자를 입력해주세요
 
 Duplicated.obsnm=이미 등록된 관측소 입니다.
 Duplicated.obscd=이미 등록된 관측소 코드입니다.
