feat : 유효성 오류수정및 완료

--- a/src/main/resources/messages/validations.properties
+++ b/src/main/resources/messages/validations.properties
@@ -11,3 +11,5 @@ Size.requestObservatory.obscd=8자를 입력해주세요
 
 Duplicated.obsnm=이미 등록된 관측소 입니다.
 Duplicated.obscd=이미 등록된 관측소 코드입니다.
+Format.obscd=관측소코드는 숫자만 입력해주세요.
+Format=형식이 맞지 않습니다.
