design : properties파일 수정

--- a/src/main/resources/messages/commons.properties
+++ b/src/main/resources/messages/commons.properties
@@ -8,3 +8,10 @@ flw=유량
 실시간_관측값=실시간 관측값
 관측소명_입력=관측소명을 입력해주세요.
 관측소_삭제_확인=해당 관측소를삭제하시겠습니까?
+
+강수량표=강수량표
+수위표=수위표
+유량표=유량표
+연번=연번
+관측소코드=관측소 코드
+데이터_없음=데이터 없음
