feat: common 번들 메세지 추가

--- a/src/main/resources/messages/commons.properties
+++ b/src/main/resources/messages/commons.properties
@@ -39,3 +39,26 @@ PDF저장=PDF 저장
 유량표=유량표
 연번=연번
 관측소코드=관측소 코드
+관측소_삭제_확인=해당 관측소를 삭제하시겠습니까?
+
+확인=확인
+취소=취소
+관측소_상세_정보=관측소 상세 정보
+관측소_코드=관측소 코드
+관측소_유형=관측소 유형
+목록=목록
+관측유형=관측유형
+조회기간=조회기간
+10분=10분
+1시간=1시간
+일=일
+월=월
+년=년
+검색=검색
+관측_정보=관측 정보
+수정=수정
+삭제=삭제
+환경설정=환경설정
+이상치_기준_설정=이상치 기준 설정
+사용여부=사용여부
+날짜=날짜
